# windows-icons

./: Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: lib.rs  uwp_apps.rs
src/utils/: image_utils.rs  process_utils.rs
